# labs-applied

./: .coverage  .env  .gitignore  Dockerfile  Online-Classes-Service  README.md  db.ipynb  docker-compose.yml  docker-entrypoint.sh  erdScheme.pgerd  hello.py  online-classes-service.sql  openapi.yaml  pyproject.toml  variant.py
alembic/: alembic.ini  env.py  generate.py
alembic/versions/: 0e246589bc36_initial.py  104e6c0278a8_thumnail_image.py  1975ea83b712_addedEmploymentColumn.py  250aebe9416a_added_message_table.py  46f2f113d2cd_initial.py  9ef2d5b90533_added_message_table.py
api/: Class_API.py  Messages_API.py  Online Classes Service.postman_collection.json  Student_API.py  Teacher_API.py  User_API.py  _class.py  app.py  class_api.py  messages.py  messages_api.py  student.py  teacher.py  user.py
configuration/: config.py  request_formatter.py
db/init/: Dockerfile  setup.sql
errors/: auth_errors.py  general_errors.py
models/: images.ipynb  models.py
services/: classes.py  db.py  image.py  jwt.py
tests/: api_tests.py  model_tests.py  test_class_api.py
