[tool.poetry]
name = "labs-applied"
version = "0.1.0"
description = ""
authors = ["Arsenii Ohar <arsen.ogar@gmail.com>"]
readme = "README.md"
packages = [{include = "labs_applied"}]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.2.2"
waitress = "^2.1.2"
SQLAlchemy = "^1.4.42"
jupyter = "^1.0.0"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
