[tool.poetry]
name = "labs-applied"
version = "0.1.0"
description = ""
authors = ["Arsenii Ohar <arsen.ogar@gmail.com>"]
readme = "README.md"
packages = [{include = "labs_applied"}]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.2.2"
waitress = "^2.1.2"
SQLAlchemy = "^1.4.42"
jupyter = "^1.0.0"
alembic = "^1.8.1"
marshmallow = "^3.18.0"
bcrypt = "^4.0.1"
psycopg2 = "^2.9.5"
flask-jwt-extended = "^4.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
